get(0) changed to getFirst()